@@ -7,10 +7,12 @@ AUX avahi-0.6.27-no-auto-activated.patch 1677 RMD160 c5abd8cab9872c22b57de2158c3
 DIST avahi-0.6.24.tar.gz 1115626 RMD160 94f59ccbd14d99e91e259b27dd7f03404c6691e6 SHA1 a187af361fefc8bda026936bb07ccdeb41dc74bc SHA256 260070d46188ed58f5dc1174ce632c096679f6391a2b729366e7aba349d4b950
 DIST avahi-0.6.25.tar.gz 1103653 RMD160 3025f774360a8ea3b9de87e2df0b00387569aaf2 SHA1 7ce8ed5a494d72401dd81f64594fda59d2ec91fd SHA256 9220d974f5515b8ccfa3900cd72cedcac0fa4cc87ca3c64405f7c55346cbba59
 DIST avahi-0.6.27.tar.gz 1217974 RMD160 36e6a242f0c926351e31871d8a4f8a52a501fdc3 SHA1 e763bbeba92fd5b3ba3e2af5fc85aaf99b406c8b SHA256 c22df5e0b0d695bfe3cc52545bf0affc1c52060818a5a65d70055e320bc45e84
+DIST avahi-0.6.28.tar.gz 1238660 RMD160 d61b370baa3f25d57efba43f2c34b54cab7e7e9e SHA1 5da3f7da2cff8ddf74f8746e4dcb2524e5047f67 SHA256 a0d80aac88212b9f9d5331c248091d3c9c9209f0e41985421636ebd14230fc91
 EBUILD avahi-0.6.24-r2.ebuild 5400 RMD160 f955a49312b3d0b269e08358c1dce3a6ad00f037 SHA1 12f531483b56407b83be6ed2639d79f671c23226 SHA256 8ea2e741aea77123d87ba83f71cdebde92886e8716554916b87a9a79bd67d018
 EBUILD avahi-0.6.25-r1.ebuild 5001 RMD160 a3630d681a75bbb9bb12c2ef86d213750eec6a4a SHA1 3553b0e5b285db42dd303da6459924d2974206e2 SHA256 58cfcd047f3afb58134f851215ebe7e789c2e164874396b65173d9970b7f960a
 EBUILD avahi-0.6.25.ebuild 5352 RMD160 0fb9fe844fba482fbfc95caf8744b71539c55324 SHA1 353f53cbbf73ed27c5b85629fd2e09374f08a251 SHA256 854cb5b236f3109a227970a9aa99904c1f947680a8bef1345c3e98bdc89d0efa
 EBUILD avahi-0.6.27-r1.ebuild 4936 RMD160 3003c3df83b4454863f0cb15259fd4e38c2a79d7 SHA1 7d17c3bf220c9c8a9f445fb17d73e4a9afdb8864 SHA256 a5260698cfca38d54d53f1bd93be28316bc189cf6f18c38e9a6798cee762b966
 EBUILD avahi-0.6.27.ebuild 4679 RMD160 8ea7c8f93c28455161164f508b6ee46532fb1e23 SHA1 b74b902c640695c5cb73e2f75a23b6c07bef08bb SHA256 75995b26ecbcbb4d6d4a42882034acebd44f932bd8d0d9db3e149989aac07d21
-MISC ChangeLog 27632 RMD160 c32a4a1f2cfa0266125a2c457f91f94d4e033047 SHA1 3fcca49e591186d6c42e4ff2c81b815eac5dac8f SHA256 0d85c3f9e2747c304d1284e7fd2278d2001445d0ac3055afce184a94581242fd
+EBUILD avahi-0.6.28.ebuild 4877 RMD160 b4cdd6a9e0508276356c15598e1c93ec7ff5212f SHA1 ed22e47d571c7d233549c367bccb250495dff9ae SHA256 d02bd4691792658bf062294a16ec6427876042b3d58fb3e9d82e972096632cb0
+MISC ChangeLog 27751 RMD160 d048b930632a32714a398c81fcd8b322233cba80 SHA1 482c20c17f36e5972e11e3c95a0ea8eaa23231ce SHA256 24a5cc8db77c18fd8e0d1f631e1e1e8d28b19b3a586d5c1e70456ee3bb266026
 MISC metadata.xml 609 RMD160 fa4efaaf9b8ac6d75251c9bd1f0721ea175acda9 SHA1 4532738c9ff6d9d2a2aef226b827919ac31be2de SHA256 365224bb3c21c159a89fa03ea08c534eb27cc2df62012a69e03ad81779607faa
