@@ -1,6 +1,11 @@
 # ChangeLog for net-dns/avahi
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.185 2010/08/29 17:48:19 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-dns/avahi/ChangeLog,v 1.186 2010/10/05 09:22:44 swegener Exp $
+
+*avahi-0.6.28 (05 Oct 2010)
+
+  05 Oct 2010; Sven Wegener <swegener@gentoo.org> +avahi-0.6.28.ebuild:
+  Version bump.
 
   29 Aug 2010; Raúl Porcel <armin76@gentoo.org> avahi-0.6.25-r1.ebuild:
   ia64/s390/sh/sparc stable wrt #278177
